<resources>
    <string name="app_name">T5_A3_BazanGarduñoMiguelAngel</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn_punto">.</string>
    <string name="btn_mas_menos">+/-</string>
    <string name="btn_igual">=</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="btn_multi">x</string>
    <string name="btn_division">/</string>
    <string name="btn_raiz">sqrt</string>
    <string name="btn_po">x^</string>
    <string name="btn_fra">1/x</string>
    <string name="btn_borrar"> x|</string>
    <string name="btn_c">C</string>
    <string name="btn_ce">CE</string>
    <string name="btn_porciento">%</string>



</resources>
